# RLD

./: .env  .gitignore  .sops.yaml  TODO.md  netlify.toml  out.json  patch_gaps.py  recording.md  restore_sim.py  skills-lock.json  test_2025.py  test_ch.py  test_gql.js
astrid-node/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
astrid-node/.github/workflows/: ci.yml
astrid-node/docs/: architecture.md
astrid-node/examples/: manifest.example.json
astrid-node/examples/processors/: health_factor_alerts.py
astrid-node/src/astrid_node/: __init__.py  chunks.py  cli.py  clickhouse.py  config.py  duckdb_mode.py  metadata.py  native_import.py  nats_client.py  processor.py  pull.py  streams.py  views.py
astrid-node/src/rld_node/: __init__.py  chunks.py  cli.py  clickhouse.py  config.py  metadata.py  processor.py  streams.py
astrid-node/tests/: test_chunk_sync.py  test_config.py  test_export.py  test_local_metadata.py  test_manifest.py  test_processor_sdk.py  test_pull_v3.py  test_stream_install.py  test_views.py
astrid-node/tests/integration/: test_publish_consume.py  test_snapshot_e2e.py
backend/analytics/: base.py  config.py  config.toml  docker-compose.spark-astrid-e2e.yml  docker-compose.yml  euler_schema.py  fluid_full_coverage.py  fluid_registry.py  protocols.py  pyproject.toml  requirements.txt  schema.py
backend/analytics/api/: graphql.py
backend/analytics/docs/: AAVE_INDEXER.md  AAVE_REPLAY_RUNBOOK.md  INDEXER_ARCHITECTURE.md
backend/analytics/scripts/: backfill_fluid_product_snapshots.py  euler_ops.py  (+8 more)
(+2952 files in other folders)
