[project]
name = "rld-analytics"
version = "0.1.0"
description = "Aave V3 data pipeline extraction"
readme = "docs/INDEXER_ARCHITECTURE.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.2",
    "web3>=6.15.0",
    "asyncpg>=0.29.0",
    "boto3>=1.40.0,<2",
]

[project.scripts]
astrid-publish = "analytics.streams.cli:main"


[tool.coverage.run]
omit = [
    "backend/analytics/scripts/*",
    "backend/analytics/tests/*",
    "backend/analytics/test_*.py",
    "backend/analytics/verify.py",
]

[tool.pytest.ini_options]
pythonpath = [".."]
markers = [
    "live: tests that require a live Ethereum mainnet RPC endpoint",
    "r2_e2e: tests that write to a real Cloudflare R2 test prefix",
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E401", "E402", "E701", "E702", "E722", "F401", "F541", "F841"]
